feat: custom airports (and new airport data source) (#159)
