# src/lib/server/routes/autocomplete.ts
@@ -1,10 +1,9 @@
 import { z } from 'zod';
 
 import { AIRLINES } from '$lib/data/airlines';
-import { AIRPORTS } from '$lib/data/airports';
+import type { Airport } from '$lib/db/types';
 import { authedProcedure, router } from '$lib/server/trpc';
-import { sortAndFilterByMatch } from '$lib/utils';
-import type { Airport } from '$lib/utils/data/airports';
+import { findAirports } from '$lib/server/utils/airport';
 
 const eq = (a: string | number, b: string | number) => {
   a = String(a);
@@ -16,17 +15,7 @@ export const autocompleteRouter = router({
   airport: authedProcedure
     .input(z.string())
     .query(async ({ input }): Promise<Airport[]> => {
-      return sortAndFilterByMatch(
-        AIRPORTS,
-        input,
-        [
-          { key: 'name' },
-          { key: 'IATA', exact: true },
-          { key: 'ICAO', exact: true },
-        ],
-        (a, b) => b.tier - a.tier,
-        10,
-      );
+      return await findAirports(input);
     }),
   airline: authedProcedure
     .input(z.string())
